add blog button

--- a/index.html
+++ b/index.html
@@ -33,125 +33,134 @@
     <!-- end header section  -->
     <!-- start main section  -->
     <main>
-      <section class="blog-section">
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+      <div class="blog-button">
+        <div class="ab">
+          <div class="abc">
+            <button>match</button>
+            <button>match</button>
+            <button id="blog">match</button>
           </div>
         </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
+        <section class="blog-section">
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+          <div class="blog-part">
+            <div class="blog-image">
+              <img src="assets/Blog Image.png " alt="">
+            </div>
+            <div class="transfer-detail">
+              <a href="">Transfer</a>
+              <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
+            </div>
+            <div class="match-duration">
+              <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
+              <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
+            </div>
           </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
-          </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
-          </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
-          </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
-          </div>
-        </div>
-        <div class="blog-part">
-          <div class="blog-image">
-            <img src="assets/Blog Image.png " alt="">
-          </div>
-          <div class="transfer-detail">
-            <a href="">Transfer</a>
-            <h2>Transfer Live:Chlesea in talks over Kimpenbe transfer</h2>
-          </div>
-          <div class="match-duration">
-            <span class="span-tag"><i class="fa-regular fa-clock"></i> 10h </span>
-            <span class="span-tag"><i class="fa-regular fa-comment-dots"></i> 23</span>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
   </body>
 
