added footer part

--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
         </section>
       </div>
     </main>
+    <footer>
+      <div class="footer-title">
+        <div class="">
+          <h1 class="title">Goal</h1>
+        </div>
+        <hr>
+        <div class="footer-link">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings</a>
+          <a href="">Goal App</a>
+          <a href="">Goal Live</a>
+        </div>
+      </div>
+    </footer>
   </body>
 
 </html>
