added responsive and footer part

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <!-- start main section  -->
     <main>
       <div class="blog-button">
-        <div class="ab">
-          <div class="abc">
-            <button>match</button>
-            <button>match</button>
-            <button id="blog">match</button>
+        <div class="button-container">
+          <div class="buttons">
+            <button>Upcomming Match</button>
+            <button>All Group</button>
+            <a href="upcomming-match.html" id="blog">Blog</a>
           </div>
         </div>
         <section class="blog-section">
